# tesser

./: .gitignore  .profile  .zenodo.json  README.md  setup.cfg  setup.py
jupyter/: demo_sr.ipynb  fit_induct_comm_g.ipynb  fit_induct_model_comp.ipynb  fit_induct_sr_a10.ipynb  fit_induct_sr_comm_gqw_a10.ipynb  fit_induct_sr_comm_gqw_a10_tau.ipynb  fit_induct_sr_g_a10.ipynb  plot_beh_group.ipynb  plot_beh_induct.ipynb  plot_beh_parse.ipynb  plot_beh_regress.ipynb  plot_beh_struct.ipynb  plot_behav_regress.ipynb  plot_fitted_sr.ipynb  plot_group.ipynb  plot_induct.ipynb  plot_parse.ipynb  plot_sl_hipr.ipynb  plot_sl_prcl.ipynb  plot_sl_precl.ipynb  plot_struct.ipynb
matlab/: export_objects.m  load_headers.m
src/tesser/: figures.py  learn.pyx  model.py  mvpa.py  network.py  raw.py  rsa.py  sr.pyx  tasks.py  util.py
src/tesser/data/: figures.mplstyle  task-group_beh.json  task-induct_events.json  task-learn_events.json  task-parse_events.json  task-struct_events.json
tests/: test_sr.py
