[metadata]
name = tesser
version = 1.0.0
url = https://github.com/prestonlab/tesser
author = Neal Morton
author_email = mortonne@gmail.com
description = Tesser: Behavioral and neural analysis of statistical learning
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fMRI, neuroimaging, RSA
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
    nilearn
    matplotlib
    seaborn
    networkx
    pingouin
    watermark
    mindstorm
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
neural =
    ezlaunch
    brainiak
test =
    pytest
